layout bugs and copy correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -658,8 +658,8 @@ box2 img {
   margin: 4px;
 }
 .researchQuestions {
-  -ms-grid-column: 1;
-  grid-column: 1;
+  -ms-grid-column: 2;
+  grid-column: 2;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr) [2];
@@ -884,8 +884,8 @@ box2 img {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 .expFeedbackComs {
-  -ms-grid-column: 1;
-  grid-column: 1;
+  -ms-grid-column: 2;
+  grid-column: 2;
   -ms-grid-row-align: end;
   align-self: end;
 }
