--- a/css/styles.original.css
+++ b/css/styles.original.css
@@ -470,7 +470,7 @@ box2 img {
   margin: 4px;
 }
 .researchQuestions {
-  grid-column: 1;
+  grid-column: 2;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -635,7 +635,7 @@ box2 img {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 .expFeedbackComs {
-  grid-column: 1;
+  grid-column: 2;
   align-self: end;
 }
 
